--- a/.github/workflows/flask01.yml
+++ b/.github/workflows/flask01.yml
@@ -8,7 +8,7 @@ env:
 on:
   push:
     branches: 
-    - main
+    - master
 
 
 jobs:
@@ -20,7 +20,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Create zip deployment package name
-        run: zip -r ${{ env.DEPLOY_PACKAGE_NAME }} .
+        run: zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./ -x *.git*
 
       - name: Configure aws credentials
         uses: aws-actions/configure-aws-credentials@v1
